# plutus

./: .env.example  .gitignore  .gitignore.recommended  INTEGRATION_STRATEGY.md  NOTES.txt  PLUTUS_ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  demo_plutus.py  extended_demo_responses.py  pyproject.toml  quick_test_demo.py  requirements.txt  run_test.py  test_anthropic_direct.py  test_api_connection.py  test_phase3_agents.py  test_plutus.py  test_production_ready.py  test_real_scenarios.py  test_scenarios.json  validate_imports.py
data/: TEST_STRATEGY.md  sample_questions.json  sample_users.json
src/learning/: async_deep_dive.py  enhanced_user_profiling.py  lesson_1_basic_agent.py  lesson_1_basic_agent_simulated.py  lesson_1_exercise.py  lesson_1_parallel_clean.py  lesson_1_parallel_fixed.py  lesson_2_conditional_routing.py  lesson_3_memory_management.py  lesson_4_production_integration.py  lesson_5_real_claude_integration.py
src/plutus/: __init__.py
src/plutus/agents/: __init__.py  advanced_orchestrator.py  base_agent.py  financial_analysis_agent.py  goal_extraction_agent.py  mixins.py  orchestrator.py  recommendation_agent.py  risk_assessment_agent.py
src/plutus/core/: __init__.py  config.py
src/plutus/models/: __init__.py  state.py
src/plutus/services/: __init__.py  context_service.py  data_service.py  memory_service.py
src/plutus/testing/: __init__.py  plutus_test.py
src/testing/: question_analyzer.py
